Implement NFA and DFA classes. Perform code cleanup.